--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^article/list$ index.php?controller=article&action=list
+RewriteRule ^article/list/$ index.php?controller=article&action=list
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^article/show/([0-9]+)$ index.php?controller=article&action=show&id=$1
