--- a/.htaccess
+++ b/.htaccess
@@ -8,5 +8,6 @@ RewriteRule ^article/edit/([0-9]+)?$ index.php?controller=article&action=edit&id
 RewriteRule ^user/list/([0-9]+)?$ index.php?controller=user&action=list&id=$1
 RewriteRule ^user/show/([0-9]+)?$ index.php?controller=user&action=show&id=$1
 RewriteRule ^user/edit/([0-9]+)?$ index.php?controller=user&action=edit&id=$1
+RewriteRule ^user/login/([0-9]+)?$ index.php?controller=user&action=login&id=$1
 RewriteRule ^cart/$ index.php?controller=order&action=show
 RewriteRule ^cart/(edit|order)/$ index.php?controller=order&action=$1
