--- a/.htaccess
+++ b/.htaccess
@@ -8,9 +8,12 @@ RewriteRule ^article/edit/([0-9]+)?$ index.php?controller=article&action=edit&id
 RewriteRule ^user/list/([0-9]+)?$ index.php?controller=user&action=list&id=$1
 RewriteRule ^user/show/([0-9]+)?$ index.php?controller=user&action=show&id=$1
 RewriteRule ^user/edit/([0-9]+)?$ index.php?controller=user&action=edit&id=$1
-RewriteRule ^user/login/([0-9]+)?$ index.php?controller=user&action=login&id=$1
-RewriteRule ^page/impressum/([0-9]+)?$ index.php?controller=page&action=impressum&id=$1
-RewriteRule ^page/contact/([0-9]+)?$ index.php?controller=page&action=contact&id=$1
+RewriteRule ^user/login/$ index.php?controller=user&action=login
+RewriteRule ^page/impressum/$ index.php?controller=page&action=impressum
+RewriteRule ^page/contact/$ index.php?controller=page&action=contact
 RewriteRule ^page/gtc/([0-9]+)?$ index.php?controller=page&action=gtc&id=$1
 RewriteRule ^cart/$ index.php?controller=order&action=show
 RewriteRule ^cart/(edit|order)/$ index.php?controller=order&action=$1
+RewriteRule ^order/$ index.php?controller=order&action=list
+RewriteRule ^order/list/$ index.php?controller=order&action=listall
+RewriteRule ^order/detail/([0-9]+)$ index.php?controller=order&action=detail&id=$1
